# byddl

./: .gitignore  README.md  main.py  pyproject.toml  机器翻译.ipynb
deep_thoughts/: 01、PyTorch介绍与张量的创建.ipynb  02、PyTorch张量的运算API（上）.ipynb  03、PyTorch张量的运算API（下）.ipynb  04、PyTorch的Dataset与DataLoader详细使用教程.ipynb  05、深入剖析PyTorch DataLoader源码.ipynb  06、PyTorch中搭建分类网络实例.ipynb  07、深入剖析PyTorch nn.Module源码.ipynb  08、深入剖析PyTorch的state_dict、parameters、modules源码.ipynb  10、PyTorch autograd使用教程.ipynb  11、PyTorch中如何进行向量微分、矩阵微分与计算雅克比行列式.ipynb  12、如何在PyTorch中训练模型.ipynb  13、详细推导自动微分Forward与Reverse模式.ipynb  14、保存与加载PyTorch训练的模型和超参数.ipynb  15、Dropout原理以及其TF&Torch&Numpy源码实现.ipynb  16、PyTorch中进行卷积残差模块算子融合.ipynb  17、ConvMixer模型原理及其PyTorch逐行实现.ipynb  18、深入剖析PyTorch中的Transformer API源码.ipynb  19、Transformer模型Encoder原理精讲及其PyTorch逐行实现.ipynb  20、Transformer模型Decoder原理精讲及其PyTorch逐行实现.ipynb  21、Transformer Masked loss原理精讲及其PyTorch逐行实现.ipynb  22、PyTorch nn.Conv2d卷积网络使用教程.ipynb  23、手写并验证滑动相乘实现PyTorch二维卷积.ipynb  24、手写并验证向量内积实现PyTorch二维卷积.ipynb  25、手写实现nn.TransposedConv转置卷积.ipynb  26、手写卷积与转置卷积的代码总结.ipynb  27、手写实现PyTorch的Dilated Conv和GroupConv.ipynb  28、Vision Transformer（ViT）模型原理及PyTorch逐行实现.ipynb  29、PyTorch RNN的原理及其手写复现.ipynb  30、PyTorch LSTM和iLSTM的原理及其手写复现.ipynb  31、PyTorch GRU的原理及其手写复现.ipynb  32、基于PyTorch的文本分类项目模型与训练代码讲解.ipynb  33、完整讲解PyTorch多GPU分布式训练代码编写.ipynb  34、Swin Transformer论文精讲及其PyTorch逐行实现.ipynb  35、基于PyTorch手写Attention-based Seq2Seq模型.ipynb  36、PyTorch训练加速技巧与爱因斯坦求和示法.ipynb  37、Word Embedding原理精讲及其PyTorch API教程详解.ipynb  38、ConvNeXt论文导读与模型精讲.ipynb  39、ConvNeXt模型代码逐行讲解.ipynb  (+51 more)
models/: README.md  (+20 more)
(+7 files in other folders)
